force-app/main/default/objects/Price_Plan__c/Price_Plan__c.object-meta.xml
<CustomObject>
    <label>Price Plan</label>
    <nameField>
        <displayFormat>Price Plan - {0000}</displayFormat>
        <label>Price Plan Serial #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>