force-app/main/default/objects/Price_Plan__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <type>TextArea</type>
</CustomField>