force-app/main/default/objects/Price_Plan__c/fields/Canada_Tier__c.field-meta.xml
<CustomField>
    <fullName>Canada_Tier__c</fullName>
    <label>Canada Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>