force-app/main/default/objects/Price_Plan__c/fields/Cap__c.field-meta.xml
<CustomField>
    <fullName>Cap__c</fullName>
    <label>Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>