force-app/main/default/objects/Price_Plan__c/fields/Japan_Tier__c.field-meta.xml
<CustomField>
    <fullName>Japan_Tier__c</fullName>
    <label>Japan Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>