force-app/main/default/objects/Price_Plan__c/fields/Link_to_IO__c.field-meta.xml
<CustomField>
    <fullName>Link_to_IO__c</fullName>
    <label>Link to IO</label>
    <type>TextArea</type>
</CustomField>