force-app/main/default/objects/Price_Plan__c/fields/Netherlands_Tier__c.field-meta.xml
<CustomField>
    <fullName>Netherlands_Tier__c</fullName>
    <label>Netherlands Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>