force-app/main/default/objects/Price_Plan__c/fields/New_Zealand_Tier__c.field-meta.xml
<CustomField>
    <fullName>New_Zealand_Tier__c</fullName>
    <label>New Zealand Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>