force-app/main/default/objects/Price_Plan__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <label>Payment Plan</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Tiers</fullName>
            </value>
            <value>
                <fullName>Equal Usage</fullName>
            </value>
            <value>
                <fullName>Top 15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>