force-app/main/default/objects/Price_Plan__c/fields/South_Korea_Tier__c.field-meta.xml
<CustomField>
    <fullName>South_Korea_Tier__c</fullName>
    <label>South Korea Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>