force-app/main/default/objects/Price_Plan__c/fields/Sweden_Tier__c.field-meta.xml
<CustomField>
    <fullName>Sweden_Tier__c</fullName>
    <label>Sweden Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>