force-app/main/default/objects/Price_Plan__c/fields/Termination_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Termination_Approved_By__c</fullName>
    <label>Termination Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>