force-app/main/default/objects/Price_Plan__c/fields/Termination_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reasons__c</fullName>
    <label>Termination Reasons</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>