force-app/main/default/objects/Price_Plan__c/fields/Tier_1_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Rate__c</fullName>
    <label>Tier 1 Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>