force-app/main/default/objects/Price_Plan__c/fields/Tier_3_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Rate__c</fullName>
    <label>Tier 3 Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>