force-app/main/default/objects/Price_Plan__c/fields/Top_15_Rate__c.field-meta.xml
<CustomField>
    <fullName>Top_15_Rate__c</fullName>
    <label>Top 15 Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>