force-app/main/default/objects/Price_Plan__c/fields/United_Kingdom_Tier__c.field-meta.xml
<CustomField>
    <fullName>United_Kingdom_Tier__c</fullName>
    <label>United Kingdom Tier</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>