force-app/main/default/objects/Price_Plan__c/fields/Usage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rate__c</fullName>
    <label>Usage Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>